--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -33,24 +33,26 @@
             <span>Trouvez vite les oiseaux proches de vous et apprenez à les connaître!</span>
         </div>
 
-        <div class="d-flex flex-row justify-content-between row-hl">
-            {{ form_start(formBirdFilter) }}
-            <div class="item-h1">
+        <div class="row">
+
+            <div class="col">
                 <input type="search"><i class="fa fa-search form-control" aria-hidden="true"></i>
             </div>
-            <div class="item-h1">
+            <div class="col">
+                {{ form_start(formBirdFilter) }}
                 {{ form_row(formBirdFilter.plumage) }}
             </div>
-            <div class="item-h1">
+            <div class="col">
                 {{ form_row(formBirdFilter.formeBec) }}
             </div>
-            <div class="item-h1">
+            <div class="col">
                 {{ form_row(formBirdFilter.pattes) }}
             </div>
-            <div class="item-h1">
+            <div class="col">
                 {{ form_row(formBirdFilter.couleurBec) }}
+                {{ form_end(formBirdFilter) }}
             </div>
-            {{ form_end(formBirdFilter) }}
+
         </div>
 
 
