--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -134,48 +134,47 @@
                     <h2>Mes observations</h2>
                     <span>Retrouvez vos meilleures captures et vos plus belles rencontres</span>
                 </div>
-                	{# Liste des observations utilisateur #}
-	                <div class="row justify-content-xl-center">
-	                    {% for userObservation in userObservations %}
-	                    	{# Carte oiseau observé #}
-	                        <div class="col-12 col-sm-10 col-lg-6 col-xxl-5 mx-auto mx-xl-0 mb-4">
-	                            <div class="p-2 nao-card mx-auto">
-                                	<div class="d-flex flex-nowrap">
-                                        <div class="bird-img-wrapper">
-                                            {% if userObservation.image == null %}
-                                                <img src="{{ asset('img/anonymeBird.png') }}"
-                                                                           alt="prise par {{ userObservation.user.username }}"
-                                                                           class="bird-img">
-                                                {% else %}
+            	{# Liste des observations utilisateur #}
+                <div class="row justify-content-xl-center">
+                    {% for userObservation in userObservations %}
+                    	{# Carte oiseau observé #}
+                        <div class="col-12 col-sm-10 col-lg-6 col-xxl-5 mx-auto mx-xl-0 mb-4">
+                            <div class="p-2 nao-card mx-auto">
+                            	<div class="d-flex flex-nowrap">
+                                    <div class="bird-img-wrapper">
+                                        {% if userObservation.image == null %}
+                                            <img src="{{ asset('img/anonymeBird.png') }}"
+                                                                       alt="prise par {{ userObservation.user.username }}"
+                                                                       class="bird-img">
+                                            {% else %}
 
-                                                    <img src="{{ asset(userObservation.image) }}"
-                                                         alt="prise par {{ userObservation.user.username }}"
-                                                         class="bird-img">
+                                                <img src="{{ asset(userObservation.image) }}"
+                                                     alt="prise par {{ userObservation.user.username }}"
+                                                     class="bird-img">
+                                        {% endif %}
 
-                                            {% endif %}
-
+                                    </div>
+                                    <div class="col d-flex flex-column justify-content-between">
+                                        <div class="align-self-end">
+                                            <span class="text-muted time">Observé il y
+                                                a {{ userObservation.updateAt | ago }}</span>
                                         </div>
-                                        <div class="col d-flex flex-column justify-content-between">
-                                            <div class="align-self-end">
-                                                <span class="text-muted time">Observé il y
-                                                    a {{ userObservation.updateAt | ago }}</span>
-                                            </div>
-                                            <div class="d-flex flex-column align-self-start">
-                                            	<h3 class="align-self-end text-left">étourneau améthyste</h3>
-                                            	<p class="align-self-start m-0">{{ userObservation.user.username | capitalize }}</p>
-                                            </div>
-                                            <div class="align-self-end">
-												<span class="fa-stack fa">
-													<i class="fa fa-heart fa-stack-2x" aria-hidden="true"></i>
-													<strong class="fa fa-stack heart-text">{{ userObservation.vote }}</strong>
-												</span>
-                                            </div>
+                                        <div class="d-flex flex-column align-self-start">
+                                        	<h3 class="align-self-end text-left">étourneau améthyste</h3>
+                                        	<p class="align-self-start m-0">{{ userObservation.user.username | capitalize }}</p>
                                         </div>
-                                	</div>
-	                            </div>
-	                        </div>
-	                    {% endfor %}
-	                </div>
+                                        <div class="align-self-end">
+											<span class="fa-stack fa">
+												<i class="fa fa-heart fa-stack-2x" aria-hidden="true"></i>
+												<strong class="fa fa-stack heart-text">{{ userObservation.vote }}</strong>
+											</span>
+                                        </div>
+                                    </div>
+                            	</div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
 
@@ -264,7 +263,7 @@
                 </div>
 
 				{# Google Map #}
-	            <div class="goole-map mb-5 col-12 col-sm-10 col-lg-12 col-xxl-10 mx-auto px-0">
+	            <div class="mb-5 col-12 col-sm-10 col-lg-12 col-xxl-10 mx-auto px-0">
 	                <div class="rounded" style="height: 400px; background-color: #999999"></div>
 	            </div>
 
