--- a/web/css/base.css
+++ b/web/css/base.css
@@ -159,7 +159,7 @@ a:hover {
 .nav-item {
     font-size: 12px;
     text-transform: uppercase;
-    line-height: 17px;
+    line-height: 12px;
     letter-spacing: 1px;
     display: inline-block;
 }
@@ -227,6 +227,8 @@ button:focus {
 
 .nav-wrap {
     height: calc(100vh - 135px);
+    position: relative;
+    z-index: 999;
 }
 
 .navbar-logo {
@@ -290,7 +292,7 @@ button:focus {
 }
 
 .flipped {
-    margin-top: -1px;
+    margin-top: -2px;
 }
 
 .visible-svg {
@@ -482,10 +484,14 @@ input[type=number]::-webkit-inner-spin-button {
     appearance: none;
 }
 
-select::-webkit-inner-spin-button {
+select {
+    padding: 5px 8px;
+    width: 130%;
+    border: none;
+    box-shadow: none;
+    background: transparent;
+    background-image: none;
     -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
 }
 
 textarea {
@@ -508,6 +514,7 @@ label {
     background: var(--off-white);
     height: 11px;
     padding: 0 5px !important;
+    color: #a9a9a9;
 }
 
 .input-group-icon {
@@ -823,9 +830,6 @@ label {
     margin-left: -3px;
 }
 
-
-
-
 #appbundle_observation_imageFile input{
   display: none;
 }
@@ -834,4 +838,17 @@ label {
   cursor: pointer;
     color: #00b1ca;
     font-weight: bold;
+}
+
+.label-image {
+    background-image: url("../img/awards.jpg");
+}
+
+/* GOOGLE MAP */
+#map{
+    border-radius: 25px;
+    height: 400px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
