--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -80,16 +80,15 @@
                 {{ form_end(form) }}
             </div>
 
-            {#-----MODAL DELETE USER-----#}
-            <div class="modal modal-alert pt-5" id="forgetPassModal">
+            {#-----MODAL RECUPERATION MOT DE PASSE-----#}
+            <div class="modal modal-alert pt-5 px-1" id="forgetPassModal">
                 <div class="close-wrap d-flex mx-auto align-items-center justify-content-center">
                     <button type="button" class="close-button text-center mb-1" data-dismiss="modal">
                         &times;
                     </button>
                 </div>
                 <div class="modal-dialog">
-
-                    <div class="modal-content col-10 col-md-8 col-lg-6 py-4 mx-auto">
+                    <div class="modal-content col-12 col-sm-10 col-md-8 col-xl-5 py-4 mx-auto">
                         <div class="d-flex flex-column">
                             <div class="modal-title heading justify-content-center mb-3">
                                 <h2>Mot de passe oublié ?</h2>
