--- a/app/Resources/views/user/register.html.twig
+++ b/app/Resources/views/user/register.html.twig
@@ -35,8 +35,8 @@
                 </div>
 
                 <h4 class="text-center mb-4">Connectez-vous !</h4>
-                <a href="{{ path('connect_to_facebook') }}" class="btn btn-block btn-social btn-facebook text-center">Se connecter avec Facebook</a>
-                <a href="#" class="btn btn-block btn-social btn-google text-center">Se connecter avec Google</a>
+                <a href="{{ path('connect_to_facebook') }}" class="btn btn-block btn-social btn-facebook text-center">S'inscrire avec Facebook</a>
+                <a href="#" class="btn btn-block btn-social btn-google text-center">S'inscrire avec Google</a>
 
                 {% for message in app.flashes('notice') %}
                     <div class="alert alert-info">
