--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -195,8 +195,8 @@
 
 					{#---EN COURS---#}
                 	<div class="d-flex flex-wrap align-items-center">
-                	    {# Modification Avatar #}
-                	    <div class="col-12 col-md-6">
+                	    {# FORMULAIRE DE CHANGEMENT D'AVATAR #}
+                	    <div class="col-12 col-md-6 mb-5">
                 	        <div class="d-flex flex-column align-items-center">
                 	            <img src="{{ asset('img/'~ user.profilePicture) }}" alt="photo de profil" class="rounded-circle" id="profileImg">
                 	            <div class="text-center mt-3">
@@ -204,48 +204,83 @@
                 	            </div>
                 	        </div>
                 	    </div>
-                	    {# Modification pseudo #}
+                	    {# FORMULAIRE DE CHANGEMENT DE PSEUDO #}
                 	    <div class="col-12 col-md-6">
                 	        <h4 class="text-center mb-4">Modifier votre pseudo</h4>
+                            <div class="row">
+                                <div class="col">
+                                    {{ form_start(formChangePseudo) }}
+                                        {{ form_row(formChangePseudo.username) }}
+                                    {{ form_end(formChangePseudo) }}
+                                    <button type="submit" class="btn btn-primary text-uppercase d-flex mx-auto" formnovalidate>MODIFIER</button>
+                                </div>
+                            </div>
                 	    </div>
                 	</div>
                 	{#---EN COURS---#}
 
 
-                    <div class="row">
-                        <div class="col">
-                            <a href="#"><img class="profileImg"
-                                             src="{{ asset('img/'~ user.profilePicture) }}"></a>
-                            <p><a href="#">Changer la photo de profil</a></p>
-                        </div>
+                    <div class="row mt-5">
 
-                        <div class="col">
+                        {# FORMULAIRE DE CHANGEMENT D'EMAIL #}
+                        {# <div class="col-12 col-md-6">
+                            <h4 class="text-center mb-4">Modifier votre mot de passe</h4>
                             <div class="col">
-                                {{ form_start(formChangePseudo) }}
-                                    {{ form_row(formChangePseudo.username) }}
-                                    <button type="submit" class="btn btn-primary text-uppercase" formnovalidate>Modifier
-                                    </button>
-                                {{ form_end(formChangePseudo) }}
+                                {{ form_start(formChangePassword) }}
+                                {{ form_row(formChangePassword._password,{
+                                    'label' : 'Ancien mot de passe',
+                                    'attr' : {
+                                        'placeholder' : "Ancien mot de passe"
+                                    },
+                                    'class' : ''
+                                }) }}
+                                {{ form_row(formChangePassword.plainPassword.first, {
+                                    'label' : 'Nouveau mot de passe',
+                                    'attr' : {
+                                        'placeholder' : "Nouveau mot de passe"
+                                    }
+                                }) }}
+                                {{ form_row(formChangePassword.plainPassword.second, {
+                                    'label' : 'Confirmez votre mot de passe',
+                                    'attr' : {
+                                        'placeholder' : "Confirmez votre mot de passe"
+                                    }
+                                }) }}
+                                <button type="submit" class="btn btn-primary d-flex mx-auto" formnovalidate>MODIFIER
+                                </button>
+                                {{ form_end(formChangePassword) }}
+                            </div>
+                        </div> #}
+
+                        {# FORMULAIRE DE CHANGEMENT DE MOT DE PASSE #}
+                        <div class="col-12 col-md-6">
+                            <h4 class="text-center mb-4">Modifier votre mot de passe</h4>
+                            <div class="col">
+                                {{ form_start(formChangePassword) }}
+                                {{ form_row(formChangePassword._password,{
+                                    'label' : 'Ancien mot de passe',
+                                    'attr' : {
+                                        'placeholder' : "Ancien mot de passe"
+                                    },
+                                    'class' : ''
+                                }) }}
+                                {{ form_row(formChangePassword.plainPassword.first, {
+                                    'label' : 'Nouveau mot de passe',
+                                    'attr' : {
+                                        'placeholder' : "Nouveau mot de passe"
+                                    }
+                                }) }}
+                                {{ form_row(formChangePassword.plainPassword.second, {
+                                    'label' : 'Confirmez votre mot de passe',
+                                    'attr' : {
+                                        'placeholder' : "Confirmez votre mot de passe"
+                                    }
+                                }) }}
+                                <button type="submit" class="btn btn-primary d-flex mx-auto" formnovalidate>MODIFIER
+                                </button>
+                                {{ form_end(formChangePassword) }}
                             </div>
                         </div>
-
-                        <div class="col">
-                            {{ form_start(formChangePassword) }}
-                            {{ form_row(formChangePassword._password,{
-                                'label' : 'Mot de passe',
-                                'class' : ''
-                            }) }}
-                            {{ form_row(formChangePassword.plainPassword.first, {
-                                'label' : 'Nouveau mot de passe'
-                            }) }}
-                            {{ form_row(formChangePassword.plainPassword.second, {
-                                'label' : 'Confirmez votre mot de passe'
-                            }) }}
-                            <button type="submit" class="btn btn-primary" formnovalidate>Changer de mot de passe
-                            </button>
-                            {{ form_end(formChangePassword) }}
-                        </div>
-
                     </div>
                 </div>
             </div>
