--- a/web/css/base.css
+++ b/web/css/base.css
@@ -178,8 +178,16 @@ a:hover {
     border-radius: 50px;
     color: white;
     text-transform: uppercase;
+    font-size: 12px;
 }
-
+.btn {
+    padding: 14px 24px;
+    border: 0 none;
+    border-radius: 50px;
+    color: white;
+    text-transform: uppercase;
+    font-size: 12px;
+}
 .btn-primary {
     background: var(--purple);
     height: 48px;
@@ -210,6 +218,11 @@ button:focus {
     outline: none;
 }
 
+@media (min-width: 576px) {
+    .btn {
+        font-size: 14px;
+    }
+}
 
 /* NAVBAR */
 
@@ -697,7 +710,9 @@ label {
 
 
 /* MODAL OBSERVATION */
-
+.modal {
+    padding : 0 30px !important;
+}
 .close-wrap {
     width: 48px;
     height: 48px;
