--- a/web/css/observation.css
+++ b/web/css/observation.css
@@ -2,13 +2,17 @@
     position: relative;
     background: none;
     margin-bottom: 30px;
-    height: 408px;
+    height: 300px;
     max-height: none;
     overflow-y: scroll;
     overflow-x: hidden;
     border: none;
 }
-
+@media (min-width: 992px) {
+    .bird-observation-display {
+        height: 408px;
+    }
+}
 .upload-image {
 	min-height: 130px;
 }
