--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -1,4 +1,4 @@
-{% extends "base.html.twig"  %}
+{% extends "base.html.twig" %}
 
 {% block title %}Oiseaux{% endblock %}
 {% block stylesheets %}
@@ -7,85 +7,142 @@
 {% endblock %}
 
 {% block body %}
-<div class="container-fluid heading-page">
-    <h1 class="text-center">Oiseaux</h1>
-    <p class="text-center"><a href="{{ path('homepage') }}">Accueil</a> >> <a href="{{ path('oiseaux') }}">Oiseaux</a></p>
-</div>
-<div class="wave-svg">
-    <svg width="100%" height="100%" viewBox="0 0 1430 80" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-            <g id="wave-driedwood">
-                <g transform="translate(720.000000, 40.000000) scale(1, -1) translate(-720.000000, -40.000000) ">
-                    <g>
-                        <path d="M0,52 C0,52 153,1.46804748e-14 378.5,0 C604,0 836,52 1005,52 C1174,52 1440,0 1440,0 L1440,80 L0,80 L0,52 Z" fill="#E7E1DC"></path>
-                        <path d="M0,78 C0,78 153,26 378.5,26 C604,26 836,78 1005,78 C1174,78 1440,26 1440,26 L1440,80 L0,80 L0,78 Z" fill="#F7F3F1"></path>
+    <div class="container-fluid heading-page">
+        <h1 class="text-center">Oiseaux</h1>
+        <p class="text-center"><a href="{{ path('homepage') }}">Accueil</a> >> <a
+                    href="{{ path('oiseaux') }}">Oiseaux</a></p>
+    </div>
+    <div class="wave-svg">
+        <svg width="100%" height="100%" viewBox="0 0 1430 80" version="1.1" xmlns="http://www.w3.org/2000/svg"
+             xmlns:xlink="http://www.w3.org/1999/xlink">
+            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <g id="wave-driedwood">
+                    <g transform="translate(720.000000, 40.000000) scale(1, -1) translate(-720.000000, -40.000000) ">
+                        <g>
+                            <path d="M0,52 C0,52 153,1.46804748e-14 378.5,0 C604,0 836,52 1005,52 C1174,52 1440,0 1440,0 L1440,80 L0,80 L0,52 Z"
+                                  fill="#E7E1DC"></path>
+                            <path d="M0,78 C0,78 153,26 378.5,26 C604,26 836,78 1005,78 C1174,78 1440,26 1440,26 L1440,80 L0,80 L0,78 Z"
+                                  fill="#F7F3F1"></path>
+                        </g>
                     </g>
                 </g>
             </g>
-        </g>
-    </svg>
-</div>
+        </svg>
+    </div>
 
-<section class="mt-5">
-    <div class="container-fluid">
-        <div class="heading">
-            <h2>Notre Bible !</h2>
-            <span>Trouvez vite les oiseaux proches de vous et apprenez à les connaître!</span>
-        </div>
-
-        <div class="row">
-
-            <div class="col">
-                <input type="search"><i class="fa fa-search form-control" aria-hidden="true"></i>
-            </div>
-            <div class="col">
-                {{ form_start(formBirdFilter) }}
-                {{ form_row(formBirdFilter.plumage) }}
-            </div>
-            <div class="col">
-                {{ form_row(formBirdFilter.formeBec) }}
-            </div>
-            <div class="col">
-                {{ form_row(formBirdFilter.pattes) }}
-            </div>
-            <div class="col">
-                {{ form_row(formBirdFilter.couleurBec) }}
-                {{ form_end(formBirdFilter) }}
+    <section class="mt-5">
+        <div class="container-fluid">
+            <div class="heading">
+                <h2>Notre Bible !</h2>
+                <span>Trouvez vite les oiseaux proches de vous et apprenez à les connaître!</span>
             </div>
 
-        </div>
+            <div class="row">
+
+                <div class="col">
+                    <input type="search"><i class="fa fa-search form-control" aria-hidden="true"></i>
+                </div>
+                <div class="col">
+                    {{ form_start(formBirdFilter) }}
+                    {{ form_row(formBirdFilter.plumage) }}
+                </div>
+                <div class="col">
+                    {{ form_row(formBirdFilter.formeBec) }}
+                </div>
+                <div class="col">
+                    {{ form_row(formBirdFilter.pattes) }}
+                </div>
+                <div class="col">
+                    {{ form_row(formBirdFilter.couleurBec) }}
+                    {{ form_end(formBirdFilter) }}
+                </div>
+
+            </div>
 
 
-        <div id="map" class="mb-4">
-        </div>
+            <div id="map" class="mb-4">
+            </div>
 
-        {# Liste des oiseaux dans la bdd #}
-        <div class="row justify-content-xl-center mt-3">
-            {% for bird in birds %}
-                {# Carte oiseau observé #}
-                <div class="col-12 col-sm-10 col-lg-6 col-xxl-5 mx-auto mx-xl-0 mb-4">
-                    <div class="p-2 nao-card mx-auto">
-                        <div class="d-flex flex-nowrap align-items-center">
-                            <div class="bird-img-wrapper">
-                                <img src="{{  bird.image }}"
-                                     class="bird-img">
-                            </div>
-                            <div class="col d-flex flex-column justify-content-between">
-                                <div class="d-flex flex-column align-self-start">
-                                    <h3 class="align-self-end text-left">{{ bird.name | capitalize }}</h3>
-                                    {% if brid.taxref is defined %}
-                                    <p class="align-self-start m-0">{{ bird.taxref.nomScientifique }}</p>
-                                    {% endif %}
+            {# Liste des oiseaux dans la bdd #}
+            <div class="row justify-content-xl-center mt-3">
+                {% for bird in birds %}
+                    {# Carte oiseau observé #}
+                    <div class="col-12 col-sm-10 col-lg-6 col-xxl-5 mx-auto mx-xl-0 mb-4">
+                        <div class="p-2 nao-card mx-auto">
+                            <div class="d-flex flex-nowrap align-items-center">
+                                <div class="bird-img-wrapper">
+                                    <a href="#">
+                                        <img src="{{ bird.image }}"
+                                             class="bird-img" data-toggle="modal"
+                                             data-target="#showDetailsModal{{ bird.id }}" aria-hidden="true">
+                                    </a>
+                                </div>
+
+                                {#-----MODAL SHOW DETAILS-----#}
+                                <div class="modal modal-alert pt-5" id="showDetailsModal{{ bird.id }}">
+                                    <div class="close-wrap d-flex mx-auto align-items-center justify-content-center">
+                                        <button type="button" class="close-button text-center mb-1"
+                                                data-dismiss="modal">
+                                            &times;
+                                        </button>
+                                    </div>
+
+                                    <div class="modal-dialog">
+                                        <div class="modal-content col-10 col-md-8 col-lg-6 py-4 mx-auto">
+                                            <div class="d-flex flex-column row-h1">
+                                                <div class="modal-title heading item-h1 justify-content-center mb-3">
+                                                    <h2>{{ bird.name }}</h2>
+                                                    <p>{{ bird.taxref.nomScientifique }}</p>
+                                                </div>
+                                                <div class="modal-content heading item-h1 mb-3">
+                                                    <div class="row">
+                                                        <div class="col-4"><img src="{{ bird.image }}"
+                                                                              alt="{{ bird.name }}"
+                                                                              class="rounded"
+                                                            style="width: 100%">
+                                                        </div>
+                                                        <div class="col-8">
+                                                            <h3>DESCRIPTION</h3>
+                                                            <p>{{ bird.description }}</p>
+
+
+                                                                {% for observation in bird.observations %}
+                                                                    {% if loop.first %}
+                                                                    <h1>{{ observation.observedAt | date("d/m/y") }}</h1>
+                                                            {% endif %}
+                                                                    {% else %}
+                                                                        <h3>Pas encore d'observation de cet oiseau</h3>
+                                                                        <p><a href="{{ path('observation') }}">Soyez le premier à ajouter une observation de cette oiseau</a></p>
+                                                                {% endfor %}
+
+                                                        </div>
+                                                    </div>
+
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                {#-----END MODAL SHOW DETAILS-----#}
+
+
+                                <div class="col d-flex flex-column justify-content-between">
+                                    <div class="d-flex flex-column align-self-start">
+                                        <h3 class="align-self-end text-left">{{ bird.name | capitalize }}</h3>
+                                        {% if bird.taxref.nomScientifique is defined %}
+                                            <p class="align-self-start m-0">{{ bird.taxref.nomScientifique }}</p>
+                                        {% endif %}
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            {% endfor %}
-        </div>
+                {% endfor %}
+            </div>
 
-    </div>
-</section>
+        </div>
+    </section>
 
 {% endblock %}
 {% block javascripts %}
