--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -135,7 +135,12 @@
                                                                 {% endif %}
                                                             </div>
                                                             <div class="col-6" id="googlemapsObservation{{ observation.id }}" data-observationId="{{ observation.id }}" >
-                                                                <div id="map2"></div>
+                                                                <div id="map{{ observation.id }}" style="
+                                                                border-radius: 25px;
+                                                                height: 200px;
+                                                                width: 100%;
+                                                                margin-left: auto;
+                                                                margin-right: auto;"></div>
                                                             </div>
                                                         </div>
 
