--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -142,48 +142,52 @@
                                                                 height: 200px;
                                                                 width: 100%;
                                                                 margin-left: auto;
-                                                                margin-right: auto;"></div>
+                                                                margin-right: auto;">
+
+                                                                </div>
+                                                                {#-------------------#}
+                                                                {#PARTIE COMMENTAIRES#}
+                                                                {#-------------------#}
+                                                                <section id="commentSection">
+                                                                    <div class="container">
+
+                                                                        <div class="flex-wrap flex-column comm-display p-0">
+                                                                            {% for comment in observation.comments %}
+
+                                                                                <div class="d-flex flex-nowrap align-items-center comm m-3">
+                                                                                    <img src="{{ asset('img/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
+                                                                                    <div class="col-12 pl-3">
+                                                                                        <div class="col-12 px-0">
+                                                                                            <p class="mb-1 font-weight-bold">{{ comment.user.username|capitalize }}</p>
+
+                                                                                        </div>
+                                                                                        <div class="col-12 px-0">
+                                                                                            <p class="mb-0 text-left">{{ comment.content|capitalize }}</p>
+                                                                                        </div>
+                                                                                        <div class="col-12 px-0">
+                                                                                            <span class="time">{{ comment.updateAt|ago }}</span>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                </div>
+                                                                            {% endfor %}
+                                                                        </div>
+
+                                                                        {#FORMULAIRE COMMENT#}
+                                                                        <div class="row mt-4 align-items-center">
+                                                                            <div class="col-12 col-lg-9" id="addComment" >
+                                                                                {% include 'form/commentFormObservation.html.twig' %}
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </section>
+                                                                {#-----------------------#}
+                                                                {#FIN PARTIE COMMENTAIRES#}
+                                                                {#-----------------------#}
+
                                                             </div>
                                                         </div>
 
-                                                        {#-------------------#}
-                                                        {#PARTIE COMMENTAIRES#}
-                                                        {#-------------------#}
-                                                        <section id="commentSection">
-                                                            <div class="container">
 
-                                                                <div class="flex-wrap flex-column comm-display p-0">
-                                                                    {% for comment in observation.comments %}
-
-                                                                        <div class="d-flex flex-nowrap align-items-center comm m-3">
-                                                                            <img src="{{ asset('img/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
-                                                                            <div class="col-12 pl-3">
-                                                                                <div class="col-12 px-0">
-                                                                                    <p class="mb-1 font-weight-bold">{{ comment.user.username|capitalize }}</p>
-
-                                                                                </div>
-                                                                                <div class="col-12 px-0">
-                                                                                    <p class="mb-0 text-left">{{ comment.content|capitalize }}</p>
-                                                                                </div>
-                                                                                <div class="col-12 px-0">
-                                                                                    <span class="time">{{ comment.updateAt|ago }}</span>
-                                                                                </div>
-                                                                            </div>
-                                                                        </div>
-                                                                    {% endfor %}
-                                                                </div>
-
-                                                               {#FORMULAIRE COMMENT#}
-                                                                <div class="row mt-4 align-items-center">
-                                                                    <div class="col-12 col-lg-9" id="addComment" >
-                                                                        {% include 'form/commentFormObservation.html.twig' %}
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </section>
-                                                        {#-----------------------#}
-                                                        {#FIN PARTIE COMMENTAIRES#}
-                                                        {#-----------------------#}
                                                     {% endif %}
                                                 {% else %}
                                                     <h3>Pas encore d'observation</h3>
