--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -71,143 +71,116 @@
                 {% for bird in birds %}
                     {# Carte oiseau observé #}
                     <div class="col-12 col-sm-10 col-lg-6 col-xxl-5 mx-auto mx-xl-0 mb-4">
-                        <div class="p-2 nao-card mx-auto">
-                            <div class="d-flex flex-nowrap align-items-center">
-                                <div class="bird-img-wrapper">
-                                    <a href="#">
+                        <a href="#" data-toggle="modal"
+                               data-target="#showDetailsModal{{ bird.id }}" data-lastObservationId="{% for observation in bird.observations %}{% if loop.first %}{{ observation.id }}{% endif %}{% endfor %}">
+                            <div class="p-2 nao-card mx-auto">
+                                <div class="d-flex flex-nowrap align-items-center">
+                                    <div class="bird-img-wrapper">
                                         <img src="{{ bird.image }}"
-                                             class="bird-img" data-toggle="modal"
-                                             data-target="#showDetailsModal{{ bird.id }}" aria-hidden="true" data-lastObservationId="{% for observation in bird.observations %}{% if loop.first %}{{ observation.id }}{% endif %}{% endfor %}">
-                                    </a>
+                                            class="bird-img" >
+                                    </div>
+                                    <div class="col d-flex flex-column justify-content-between">
+                                        <div class="d-flex flex-column align-self-start">
+                                            <h3 class="align-self-end text-left">{{ bird.name | capitalize }}</h3>
+                                            {% if bird.taxref.nomScientifique is defined %}
+                                                <p class="align-self-start m-0">{{ bird.taxref.nomScientifique }}</p>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    {#-------------#}
+                    {#----MODALE---#}
+                    {#-OBSERVATION-#}
+                    {#-------------#}
+                    <div id="showDetailsModal{{ bird.id }}" class="modal fade mt-4 pb-5"
+                         role="dialog">
+                            <div class="close-wrap d-flex mx-auto align-items-center justify-content-center">
+                                <button type="button" class="close-button text-center mb-1" data-dismiss="modal">
+                                    &times;
+                                </button>
+                            </div>
+                        <div class="modal-dialog bird-modal">
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="heading mt-5">
+                                    <h2>{{ bird.name }}</h2>
+                                    <span>{{ bird.taxref.nomScientifique }}</span>
+                                </div>
+                                <div class="modal-body py-0 mb-5">
+                                    <div class="flex-wrap media align-items-center justify-content-center">
+                                        <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{ bird.image }}" alt="image {{ bird.name }}">
+                                        <div class="media-body col-12 col-md-8 p-0">
+                                            <h3 class="mt-5 mt-md-0 text-center text-md-left">DESCRIPTION</h3>
+                                            <p class="text-justify">{{ bird.description }}</p>
+                                        </div>
+                                    </div>
                                 </div>
 
-                                {#-----MODAL SHOW DETAILS-----#}
-                                <div class="modal modal-alert pt-5" id="showDetailsModal{{ bird.id }}">
-                                    <div class="close-wrap d-flex mx-auto align-items-center justify-content-center">
-                                        <button type="button" class="close-button text-center mb-1"
-                                                data-dismiss="modal">
-                                            &times;
-                                        </button>
-                                    </div>
-
-                                    <div class="modal-dialog">
-                                        <div class="modal-content col-10 col-md-8 col-lg-6 py-4 mx-auto">
-                                            <div class="d-flex flex-column row-h1">
-                                                <div class="modal-title heading item-h1 justify-content-center mb-3">
-                                                    <h2>{{ bird.name }}</h2>
-                                                    <p>{{ bird.taxref.nomScientifique }}</p>
-                                                </div>
-                                                <div class="modal-content heading item-h1 mb-3">
-                                                    <div class="row">
-                                                        <div class="col-4"><img src="{{ bird.image }}"
-                                                                              alt="{{ bird.name }}"
-                                                                              class="rounded"
-                                                            style="width: 100%">
-                                                        </div>
-                                                        <div class="col-8">
-                                                            <h3>DESCRIPTION</h3>
-                                                            <p>{{ bird.description }}</p>
+                                <div class="modal-footer pt-5 pb-4 text-center">
+                                    <div class="text-center col-12">
+                                        {% for observation in bird.observations %}
+                                            {% if loop.first %}
+                                                <h3>DERNIERE OBSERVATION</h3>
+                                                <div class="col-12">
+                                                    <div class="row align-items-center justify-content-start my-5">
+                                                        <img src="{{asset('img/') ~ observation.user.profilePicture }}" alt="Photo de {{ observation.user.username }}" class="observation-avatar rounded-circle">
+                                                        <div class="justify-content-start ml-3">
+                                                            <p class="text-left mb-1 user-name">{{ observation.user.username|capitalize }}</p>
+                                                            <span class="text-left time">{{ observation.observedAt |ago }}</span>
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div>
-
-                                            {#---------------------------#}
-                                            {#PARTIE DERNIERE OBSERVATION#}
-                                            {#---------------------------#}
-                                            <div class="last-observation" style="background-color: #DED5CD">
-                                                {% for observation in bird.observations %}
-                                                    {% if loop.first %}
-                                                        <h3 class="text-center">{{ "Dernière observation" | capitalize }}</h3>
-                                                        <div class="d-flex flex-row row-h1">
-                                                            <div class="ml-2 mr-4 item-h1">
-                                                                <img src="{{asset('img/') ~ observation.user.profilePicture }}" alt="{{ observation.user.username }}" class="user-avatar rounded-circle">
-                                                            </div>
-                                                            <div class="ml-4 item-h1">
-                                                                <p>{{ observation.user.username }} <br>
-                                                                    <span class="text-muted">{{ observation.observedAt |ago }}</span> </p>
-                                                            </div>
+                                                <div class="row">
+                                                    <div class="col-12 col-lg-6">
+                                                        <div class="d-flex flex-wrap align-items-center justify-content-between">
+                                                            {% if observation.image == null %}
+                                                                <img class="col-12 rounded p-0 mb-5" src="{{ asset('img/anonymeBird.png') }}" alt="image {{ observation.bird.name }}">
+                                                            {% else %}
+                                                                <img class="col-12 rounded p-0 mb-5" src="{{ asset(observation.image) }}" alt="image {{ observation.bird.name }}">
+                                                            {% endif %}
                                                         </div>
-                                                        <div class="row">
-                                                            <div class="col-6">
-                                                                {% if observation.image == null %}
-                                                                    <img src="{{ asset('img/anonymeBird.png') }}" class="rounded" style="width: 100%">
-                                                                    {% else %}
-                                                                        <img src="{{ asset(observation.image) }}" class="rounded" style="width: 100%">
-                                                                {% endif %}
-                                                            </div>
-                                                            <div class="col-6" id="googlemapsObservation{{ observation.id }}" data-observationId="{{ observation.id }}" >
-                                                                <div id="map{{ observation.id }}" style="
-                                                                border-radius: 25px;
-                                                                height: 200px;
-                                                                width: 100%;
-                                                                margin-left: auto;
-                                                                margin-right: auto;">
+                                                    </div>
+                                                    <div class="col-12 col-lg-6">
+                                                        {# Google Map #}
+                                                        <div id="googlemapsObservation{{ observation.id }}" data-observationId="{{ observation.id }}" class="col-12 rounded p-0 mb-5">
+                                                            <div id="map{{ observation.id }}" class="rounded" style="height: 350px"></div>
+                                                        </div>
 
-                                                                </div>
-                                                                {#-------------------#}
-                                                                {#PARTIE COMMENTAIRES#}
-                                                                {#-------------------#}
-                                                                <section id="commentSection">
-                                                                    <div class="container">
-
-                                                                        <div class="flex-wrap flex-column comm-display p-0">
-                                                                            {% for comment in observation.comments %}
-
-                                                                                <div class="d-flex flex-nowrap align-items-center comm m-3">
-                                                                                    <img src="{{ asset('img/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
-                                                                                    <div class="col-12 pl-3">
-                                                                                        <div class="col-12 px-0">
-                                                                                            <p class="mb-1 font-weight-bold">{{ comment.user.username|capitalize }}</p>
-
-                                                                                        </div>
-                                                                                        <div class="col-12 px-0">
-                                                                                            <p class="mb-0 text-left">{{ comment.content|capitalize }}</p>
-                                                                                        </div>
-                                                                                        <div class="col-12 px-0">
-                                                                                            <span class="time">{{ comment.updateAt|ago }}</span>
-                                                                                        </div>
-                                                                                    </div>
-                                                                                </div>
-                                                                            {% endfor %}
+                                                        {# AFFICHAGE COMMENTAIRES #}
+                                                        <div class="flex-wrap flex-column comm-display p-0 mb-4">
+                                                            {% for comment in observation.comments %}
+                                                                <div class="d-flex flex-nowrap align-items-center comm m-3">
+                                                                    <img src="{{ asset('img/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
+                                                                    <div class="col-12 pl-3">
+                                                                        <div class="col-12 px-0">
+                                                                            <p class="mb-1 font-weight-bold">{{ comment.user.username|capitalize }}</p>
                                                                         </div>
-
-                                                                        {#FORMULAIRE COMMENT#}
-                                                                        <div class="row mt-4 align-items-center">
-                                                                            <div class="col-12 col-lg-9" id="addComment" >
-                                                                                {% include 'form/commentFormObservation.html.twig' %}
-                                                                            </div>
+                                                                        <div class="col-12 px-0">
+                                                                            <p class="mb-0 text-left">{{ comment.content|capitalize }}</p>
                                                                         </div>
+                                                                        <div class="col-12 px-0">
+                                                                            <span class="time">{{ comment.updateAt|ago }}</span>
+                                                                        </div>  
                                                                     </div>
-                                                                </section>
-                                                                {#-----------------------#}
-                                                                {#FIN PARTIE COMMENTAIRES#}
-                                                                {#-----------------------#}
-
-                                                            </div>
+                                                                </div>
+                                                            {% endfor %}
                                                         </div>
 
-
-                                                    {% endif %}
-                                                {% else %}
-                                                    <h3>Pas encore d'observation</h3>
-                                                    <p><a href="{{ path('observation') }}">Soyez le premier à ajouter une observation de cet oiseau</a></p>
-                                                {% endfor %}
-                                            </div>
-
-                                        </div>
-
-                                    </div>
-                                </div>
-                                {#-----END MODAL SHOW DETAILS-----#}
-
-
-                                <div class="col d-flex flex-column justify-content-between">
-                                    <div class="d-flex flex-column align-self-start">
-                                        <h3 class="align-self-end text-left">{{ bird.name | capitalize }}</h3>
-                                        {% if bird.taxref.nomScientifique is defined %}
-                                            <p class="align-self-start m-0">{{ bird.taxref.nomScientifique }}</p>
-                                        {% endif %}
+                                                        {# AJOUT COMMENTAIRE #}
+                                                        <div class="col-12 px-0" id="addComment" >
+                                                            {% include 'form/commentFormObservation.html.twig' %}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            {% endif %}
+                                        {% else %}
+                                            <h3>Pas encore d'observation</h3>
+                                            <p><a href="{{ path('observation') }}">Soyez le premier à ajouter une observation de cet oiseau</a></p>
+                                        {% endfor %}
                                     </div>
                                 </div>
                             </div>
